# knnframework

./: .gitignore  26.7.knn  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  knn  knnframework  main.cpp  mathhelper.cpp  mathhelper.h  network.cpp  network.h  neuron.cpp  neuron.h
.cache/clangd/index/: main.cpp.CE6F23F7D0EAE92A.idx  main.cpp.F475FDB55DEA8238.idx  main.h.6921706E152C2E04.idx  main.h.A84DA2A20392CB2B.idx  mathhelper.cpp.35DBEDE4F87D0F1D.idx  mathhelper.cpp.B4D7A93FBFDB6806.idx  mathhelper.h.9FB58ADC57C8ACF9.idx  mathhelper.h.D1A4D0FAA89ADC8A.idx  network.cpp.FF08F1E50DDD8C43.idx  network.cu.5DDD5CE66D9F5560.idx  network.h.977B381AC42749B5.idx  network.h.9C98FF325478B5EA.idx  neuron.cpp.D6D75ED1EAE1FD5B.idx  neuron.cu.7E9237AFF4BB6679.idx  neuron.h.CD04E1D56F8F8DCB.idx  neuron.h.DC203B3D632CB980.idx
include/: mathhelper.h  network.h  neuron.h
lib/: mathhelper.cpp  network.cpp  neuron.cpp
release/: .ninja_deps  .ninja_log  build.ninja  knnframework
test/: CMakeLists.txt  NetworkTest.cpp  NeuronTest.cpp  ProjectTest.cpp  ProjectTest.h
